--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -96,7 +96,8 @@ body {
     gap: 40px;
 }
 
-.left-column, .right-column {
+.left-column,
+.right-column {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -125,7 +126,6 @@ body {
 .icon {
     font-size: 18px;
 }
-
 
 .card-footer {
     padding: 20px;
@@ -159,7 +159,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('https://cdn.jsdelivr.net/gh/JulianLaval/canvas-snow/snow.png');
+    background-image: url("https://cdn.jsdelivr.net/gh/JulianLaval/canvas-snow/snow.png");
     background-repeat: repeat;
     background-size: contain;
     pointer-events: none;
@@ -189,7 +189,8 @@ body {
         justify-content: center;
     }
 
-    .left-column, .right-column {
+    .left-column,
+    .right-column {
         align-items: center;
     }
 }
